update process preview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             android:theme="@style/AppTheme"
             tools:replace="android:appComponentFactory"
             android:appComponentFactory="whateverString"
+            android:hardwareAccelerated="true"
             android:allowBackup="false">
 
         <!--OptiSplashScreen-->
